# FAT_validator

./: CMakeLists.txt  README.md  fat12_fs.img  main.c
include/: boot_sector.h  boot_sector.hpp  dir_entry.h  dir_entry.hpp  fats.h  fats.hpp  fats_versions.hpp  print_dir.hpp  root_dir.h  root_dir.hpp  structs.h  structs.hpp  trim.hpp
src/: boot_sector.c  boot_sector.cpp  dir_entry.c  dir_entry.cpp  fats.c  fats.cpp  main.c  main.cpp  root_dir.c  root_dir.cpp  trim.cpp
